--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 
-    <title>Document</title>
+    <title>Rynique</title>
 </head>
 <body>
     
